<resources>
    <string name="app_name">Telegram Spam</string>
    <string name="no_accs">Пока нет ни одного акканута</string>
    <string name="phone_number">Номер телефона</string>
    <string name="sms_code">Код из смс</string>
    <string name="send_code">Отправить код</string>
    <string name="proxy_port">Proxy port</string>
    <string name="proxy_ip">Proxy IP</string>
    <string name="proxy_password">Proxy password</string>
    <string name="proxy_username">Proxy username</string>
    <string name="proxy">Proxy</string>
    <string name="proxy_type">Тип прокси</string>
    <string name="settings">Настройки</string>
    <string name="start_spam">Начать спам</string>
    <string name="chats">Чаты</string>
    <string name="delay">Задержка</string>
    <string name="add_file">Прикрепить файлы</string>
    <string name="hidden_status">Пустое описание аккаунта</string>
    <string name="have_photo">Есть фото</string>
    <string name="get_list_now">Получить список сейчас</string>
    <string name="message">Сообщение</string>
    <string name="guide">Инструкция</string>
    <string name="block">Блокировать после отправки</string>
    <string name="chat_guide">Вводить через зяпятую, без пробелов \nПример: @chat_name,@chat_name</string>
    <string name="files">Файлы</string>
    <string name="enter_msg">Введите сообщение…</string>
    <array name="last_online">
        <item>Сейчас онлайн</item>
        <item>Пол часа назад</item>
        <item>Час назад</item>
        <item>Три часа назад</item>
        <item>Двенадцать часов назад</item>
        <item>День назад</item>
        <item>Три дня назад</item>
        <item>Неделю назад</item>
    </array>
    <array name="proxy_types">
        <item>SOCKS 5</item>
        <item>HTTP</item>
    </array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="request_register">Запросить регистрацию</string>
    <string name="enter">Войти</string>
    <string name="login">Логин</string>
    <string name="pass">Пароль</string>
</resources>
