<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View"/>
        <variable
            name="viewmodel"
            type="com.example.telegramspam.ui.settings.SettingsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".ui.settings.SettingsFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/chats">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:maxHeight="200dp"
                    android:layout_height="wrap_content"
                    android:text="@={viewmodel.settings.groups}" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content"
                android:hint="@string/message">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:maxHeight="200dp"
                    android:layout_height="wrap_content"
                    android:text="@={viewmodel.settings.message}" />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:checked="@={viewmodel.settings.havePhoto}"
                android:text="@string/have_photo"
                android:textSize="18sp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:checked="@={viewmodel.settings.hiddenStatus}"
                android:text="@string/hidden_status"
                android:textSize="18sp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:checked="@={viewmodel.settings.block}"
                android:text="@string/block"
                android:textSize="18sp" />


            <TextView
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="Максимальный онлайн"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Spinner

                android:id="@+id/spinner"
                app:selectedValue="@={viewmodel.lastOnline}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:entries="@array/last_online" />
        </LinearLayout>

        <ProgressBar
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:visibility="@{viewmodel.dataLoading ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClick="@{viewmodel::showGuide}"
            android:text="@string/guide"
            app:layout_constraintBottom_toTopOf="@+id/button5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="@{viewmodel::loadList}"
            android:text="@string/get_list_now"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
